# scrape_x

./: .buildinfo  .gitignore  01_about.html  02_source.html  03_authors.html  04_contributing.html  CONTRIBUTING.rst  Makefile  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx.yml  test.yml
_modules/: index.html
_modules/scrape_twitter/: collecting.html  login.html  schemas.html
_modules/scrape_x/: collecting.html  login.html  media.html  schemas.html
_sources/: 02_source.rst.txt  03_authors.rst.txt
docs/: requirements.txt
docs/source/: 02_source.rst  authors.rst  conf.py  documentation.rst  index.rst
scrape_twitter/: collecting.py  login.py  schemas.py
scrape_x/: collecting.py  login.py  media.py  schemas.py
tests/: test_version.py
