[tool.poetry]
name = 'scrape_twitter'
version = "0.1.0"
description = "A python package for scraping Twitter"
authors = ["Idil Sezgin <idil.sezgin@tum.de>"]
readme = "README.rst"
license = "None"
repository = "https://repository-hosting.com/example_project"
documentation = "https://repository-hosting.com/example_project"
keywords = []
classifiers = []
packages = [
  {include = "scrape_twitter"}
]

include = []

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
bandit = "~1.7"
flake8 = "~6.1"
mypy = "~1.6"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "~7.4"
pytest-cov = "~4.1"
pytest-runner = "~6.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "~7.1"
sphinx_rtd_theme = "~1.3"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "--verbose --doctest-modules --cov-report term-missing --cov=./scrape_twitter"